spring working with LIST, no full crud yet

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
             </exclusions>
         </dependency>
         
-        <!-- Will enable this later when we go to Spring Security
+        <!-- <Will enable this later when we go to Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -68,7 +68,7 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
         </dependency> 
-        -->
+        
 
         <!--
             Simplified Data Access Using Spring Data Repository Features
